examples/negative/mutable/local_hashmap_no_row.kai
# Negative fixture (Mutable contract — the dispatch-demand masking hole,
# LOCAL companion to param_hashmap_index_no_row). A HashMap built and used
# entirely LOCALLY (it never escapes) still cannot mask `Mutable`: its
# `put` / `get` ops go through runtime effect DISPATCH and need the
# default `Mutable` handler installed. This is the key difference from a
# local `Array` — `array_set` is a direct C call with no handler, so a
# local Array legitimately masks `Mutable`; a local HashMap (or any
# Ref-backed structure) does not, because dropping `Mutable` from `main`'s
# row leaves the dispatch handler uninstalled.
#
# Before the fix, escape-analysis alone said "the map is local, mask it",
# and the program compiled clean then SEGFAULTED. The fix gates masking on
# the DEMAND KIND, not just locality: a demand flowing through dispatch is
# never maskable, regardless of escape. So `count_unique` must keep
# `Mutable` and declaring a pure `Int` row is rejected here.

import collections.hashmap.{HashMap, empty, put, get}

fn count_unique() : Int {
  let m = empty()
  put(m, "a", 1)
  put(m, "b", 1)
  match get(m, "a") {
    Some(_) -> 2
    None    -> 0
  }
}

fn main() : Unit / Console = {
  print(int_to_string(count_unique()))
}
